--- a/Projeto/Style/layout_pesquisar.css
+++ b/Projeto/Style/layout_pesquisar.css
@@ -19,6 +19,7 @@ padding:0;
     color: #575757;
     width: 100%;
     height: 100%;
+  
 }
 
 img.imagem{
@@ -36,7 +37,12 @@ i.icon{
     color:#aca5a5;
     background-color: inherit;
 }
-
+i.lup{
+    color:#e8e8f0;
+    font-size:30px;
+    position:relative;
+    bottom:-8px;
+}
 .icon:hover{ 
     background-color: rgba(0,0,0,0.1);
 }
@@ -205,19 +211,46 @@ i.home{
 }
 input[type=checkbox]:checked + .pagina-pesquisar {
   background-color: rgba(39, 37, 37, 0.966);
-  color:white;
+  color:#dddddd;
 }
 
 
 input[type=checkbox]:checked + .pagina-pesquisar  .explorer {
     background-color: rgba(65,65,65,0.75);
   
-  }
-  input[type=checkbox]:checked + .pagina-pesquisar  .paragraph{
-    color: white;
+}
+input[type=checkbox]:checked + .pagina-pesquisar  .paragraph,
+input[type=checkbox]:checked + .pagina-pesquisar button.go-to-search,
+input[type=checkbox]:checked +.pagina-pesquisar p.night-color,
+input[type=checkbox]:checked + .pagina-pesquisar  i.icon,
+input[type=checkbox]:checked + .pagina-pesquisar  input::placeholder
+{
+    color: #dddddd;
   
-  }
+}
 
+
+input[type=checkbox]:checked + .pagina-pesquisar i.lup{
+    opacity: 0.1;
+    color:  #dddddd;
+}
+input[type=checkbox]:checked + .pagina-pesquisar  p.title{
+    color: white;
+
+}
+input[type=checkbox]:checked + .pagina-pesquisar .color-bar{
+    background-color: #414141;
+
+}
+
+input[type=checkbox]:checked + .pagina-pesquisar .noturno {
+    border:none;
+    
+}
+input[type=checkbox]:checked + .pagina-pesquisar .noturno i{
+    background-color: rgba(39, 37, 37, 0.966);
+
+}
 
 
 /* fim barra inferior*/
@@ -231,7 +264,8 @@ div.bookmark{
     top:0;
     display: none;
     color:#8995a0;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y:auto;
   
    
 
@@ -275,7 +309,7 @@ section{
     align-items: center;
     display: flex;
     justify-content: center;
-   background-color: inherit;
+    background-color: inherit;
 
 }
 .bookmark-empty{
@@ -283,7 +317,16 @@ section{
     line-height: 28px;
     padding: 16px;
     text-align: center;
+    height: 70%;
+    width:100%;
 
+}
+.bookmark-empty img{
+    width: auto;
+    height: 100%;
+}
+.night-color{
+    color:#8995a0;
 }
 /*Menu*/
 
@@ -295,10 +338,10 @@ div.open-menu{
     z-index:1;
     position: absolute;
     top: 0;
-    color:#575757;
+    color:inherit;
     overflow-y:auto;
     display: none;
-    
+    overflow-x: hidden;
   
 }
 .menu-p{
@@ -327,7 +370,7 @@ div.open-menu{
     padding:5px;
     margin:4px 2px;
     border-radius: 50%;
-    background-color:inherit;
+    background-color:#f1f5f8;;
     color: #8995a0;
 }
 
@@ -434,7 +477,7 @@ li img{
     
 }
 .go-to-search{
-    color:inherit;
+    color:black;
     font: 16px "Surce sans Pro",sans-serif;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -682,3 +725,6 @@ li img{
 
 
 }
+
+
+  
