--- a/Projeto/Style/layout_pesquisar.css
+++ b/Projeto/Style/layout_pesquisar.css
@@ -12,6 +12,7 @@ font-size: 16px;
 font-family:"Source Sans Pro", sans-serif ;
 margin:0;
 padding:0;
+overflow: hidden;
 
 }
 .pagina-pesquisar{
@@ -21,7 +22,10 @@ padding:0;
     height: 100%;
   
 }
-
+.pesq{
+    overflow-y: auto;
+    overflow-x: hidden;
+}
 img.imagem{
     width: 20px;
     height: 21px;
@@ -79,7 +83,7 @@ button{
     height: 57.5px;
     width: 99%;
     top:0;
-   
+    position: fixed;
     box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -120,21 +124,35 @@ input::placeholder{
 }
 
 /*fim barra superior */
-.pesquisar{
-    position: relative;
-    top:  57.5px;
-    z-index: 1;
-}
 
+.pesquisar{
+    width: 100%;
+    position: absolute;
+    top:  0;
+    z-index: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 100%;
+    padding-top: 57.5px ;
+    padding-bottom:57.5px;
+    box-sizing: border-box;
+}
 .pesquisar p{
     font-weight: bold;
+    padding:12px 16px;
+    margin:0px;
+
+
 }
 .em_alta{
     border-top: 1px solid rgba(236,238,239,.5) ;
     border-bottom:  1px solid rgba(236,238,239,.5) ;
-    padding: 8px;
+    padding: 8px 16px;
     width: auto;
-   }
+ }
+ .pesq{
+     background-color: inherit;
+ }
 /* barra inferior*/
 .bar{
     background-color:inherit;
@@ -228,6 +246,9 @@ input[type=checkbox]:checked + .pagina-pesquisar  input::placeholder
     color: #dddddd;
   
 }
+input[type=checkbox]:checked + .pagina-pesquisar button.go-to-search:hover{
+    color:#1087ff;
+}
 
 
 input[type=checkbox]:checked + .pagina-pesquisar i.lup{
@@ -266,10 +287,6 @@ div.bookmark{
     color:#8995a0;
     overflow-x: hidden;
     overflow-y:auto;
-  
-   
-
-  
 
 }
 
@@ -303,27 +320,28 @@ i.back{
 }
 section{
     position: absolute;
-    top: 68.5px;
+    top: 57.5px;
     width: 100%;
     height: 78%;
     align-items: center;
     display: flex;
     justify-content: center;
     background-color: inherit;
-
 }
 .bookmark-empty{
+    
     font-size: 18px;
     line-height: 28px;
     padding: 16px;
     text-align: center;
-    height: 70%;
+    height: 60%;
     width:100%;
-
+   
 }
 .bookmark-empty img{
+
     width: auto;
-    height: 100%;
+    height: 90%;
 }
 .night-color{
     color:#8995a0;
@@ -373,13 +391,21 @@ div.open-menu{
     background-color:#f1f5f8;;
     color: #8995a0;
 }
+nav ul{
+    height: auto;
+    
+}
+.explorer{
+    width:110px;
+    height: 80px;
+}
 
 .open-menu section{
     height:140px;
     border-bottom: 1px solid  #dbe1e5;
     overflow-x: auto;
     background-color: inherit;
-  
+    overflow-y: hidden;
 
 }
 section p{
@@ -483,14 +509,19 @@ li img{
     margin-top: 5px;
    
 }
+
  .go-to-search:active{
     border-radius: 5px;
     border: 3px solid rgba(52,144,220,.5);
 }
-.go-to-search:hover{
+ .go-to-search:hover{
     color:#1087ff;
 }
-
+p.legenda{
+    width:110px;
+    overflow:hidden;
+    text-overflow: ellipsis;
+}
 @media only screen and (max-width: 1200px){
     input[type=text]{
         width:95% ;
@@ -637,8 +668,7 @@ li img{
         margin:0px;
         
     }
- 
-    
+      
 
 }
 @media only screen and (max-width: 350px){
@@ -706,7 +736,9 @@ li img{
     .categorias ul{
         top: 45px;
     }
-
+    input[type=text]{
+        width:81% ;
+    }
 
 }
 @media only screen and (max-width: 150px){
@@ -725,6 +757,34 @@ li img{
 
 
 }
+@media only screen and (max-height: 400px){
 
-
+    .bookmark-empty{
+        height: 50%;
+        width:100%;
+        
+    }
+    .bookmark-empty img{
+    
+        width: auto;
+        height: 70%;
+    }
   
+}
+@media only screen and (max-height: 350px){
+
+    .bookmark-empty{
+        height: 40%;
+        width:100%;
+        
+    }
+    .bookmark-empty img{
+    
+        width: auto;
+        height: 70%;
+    }
+   p.night-color{
+       font-size:10px;
+       line-height: 10px;
+   }
+}
