--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -220,7 +220,14 @@ button.noturno{
 input[type=checkbox]:checked ~ .page{
   color:#dddddd;
   background-color: #262626;
+  opacity: 100%;
 }
+
+input[type=checkbox]:checked + .page .barra, 
+input[type=checkbox]:checked + .page .barra2{
+  background-color: rgb(29, 28, 28);
+}
+
 input[type=checkbox]:checked + .page .color-bar,
 input[type=checkbox]:checked + .page figure
 {
@@ -234,17 +241,34 @@ input[type=checkbox]:checked + .page .noturno {
   
 }
 input[type=checkbox]:checked + .page .noturno i,
-input[type=checkbox]:checked + .page .barra,
-input[type=checkbox]:checked + .page .barra2{
+input[type=checkbox]:checked + .page,
+input[type=checkbox]:checked + .text-area-icons
+{
   background-color: rgba(39, 37, 37, 0.966);
 
 
 }
 input[type=checkbox]:checked + .page h1,
 input[type=checkbox]:checked + .page p.comentario,
-input[type=checkbox]:checked + .page p.rvj{
+input[type=checkbox]:checked + .page .fonte .link_button,
+input[type=checkbox]:checked + .page p.rvj,
+input[type=checkbox]:checked + .page  .text1,
+input[type=checkbox]:checked + .page  .text2,
+input[type=checkbox]:checked + .page  .save,
+input[type=checkbox]:checked + .page  .reactions button,
+input[type=checkbox]:checked + .page .quantidade-de-comentarios,
+input[type=checkbox]:checked + .page .comentarios-tecmundo,
+input[type=checkbox]:checked + .page .form-text
+{
   color:white;
 }
+
+input[type=checkbox]:checked + .page .comentarios-tecmundo:hover,
+input[type=checkbox]:checked + .page .comentarios-tecmundo a:hover,
+input[type=checkbox]:checked + .page .mudar-cor:hover{
+  color: #00aced;
+}
+
 input[type=checkbox]:checked + .page .inst_sites{
   background-color: #1f1f1f;
 }
@@ -505,7 +529,7 @@ button{
    font-weight: bold;
 }
  .comments_text{
-  color: #030303;
+  color: inherit;
   margin:0px;
   font-size: 15px;
   text-align: center;
@@ -516,6 +540,7 @@ button{
 #comments{
   border-bottom: 2px solid #e7e9ee;
 }
+
 /*botões de reações*/
 .reaction{
   display: inline-block;
@@ -572,6 +597,7 @@ button{
   height: auto;
   overflow: visible;
   margin:0px 0px 24px;
+  color:#656c6a
 
 }
 .comentarios-tecmundo{
@@ -581,7 +607,7 @@ button{
   top:3px;
   font:15px "Helvetica Neue",arial,sans-serif;
   font-weight:bold;
-  color:#656c6a;
+  color:inherit;
   white-space: nowrap;
   width: auto;
  
@@ -601,7 +627,7 @@ button{
 }
 
 .comentarios-tecmundo a{
-  color:#656c6a;
+  color:inherit;
   text-decoration: none;
 }
 
@@ -658,7 +684,7 @@ button{
   white-space: nowrap;
   width: auto;
   margin-right: 5px;
-  color:#656c6a;
+  color:inherit;
   cursor:pointer;
 
 }
@@ -738,7 +764,7 @@ textarea {
   width: 100%;
   height:35px;
   padding: 12px 20px;
-  background-color:white;
+  background-color:inherit;
   resize: none;
   font-family:"Helvetica Neue",arial,sans-serif;
   outline:none;
@@ -757,7 +783,7 @@ textarea {
   }
 
 .text-area-icons{
-  background-color: #f6f8f9;
+  background-color: inherit;
   border-top: 2px solid  #dbdfe4;
   float:right;
   width: 100%;
@@ -1109,7 +1135,7 @@ input{
   border-radius: 4px;
   font-size: 13px;
   box-sizing: border-box;
-  
+  background-color: inherit;
 }
 input:focus{
   border-color: #c2c6cc;
@@ -1173,11 +1199,12 @@ form button{
   width: 100%;
   border-bottom: lightgray 1px solid;
   padding: 16px 0px;
+  color:#444444;
  
 }
 
 .text1{
-  color:#444444;
+  color:inherit;
   font-size: 20px;
   font-weight: bold;
 
